--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         /*add your custom css rules here*/
-    </style>
+    </style>    
 </head>
 
 <body class="dark:text-white px-4">
@@ -70,7 +70,13 @@
                 })
         })       
     </script>
+    <script>
+        const mtwAppConfig = {
+            border: true // app border in the MTW page                    
+        }
+    </script>
     <script src="https://morethanwallet.com/appstore/index.js"></script>
+    <!--<script src="http://127.0.0.1:3001/appstore/index.js"></script>  -->
 </body>
 
 </html>
