--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         })       
     </script>
     <script>
-        const mtwAppConfig = {
+        // custom config for the MTW app
+        mtwAppConfig = {
             border: true // app border in the MTW page                    
         }
     </script>
