--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
                     configWebsocketEvents()
                 })
         })       
-    </script>
+    </script>   
+    <!-- special scripts for integration in MTW gallery -->
     <script>
-        // custom config for the MTW app
-        mtwAppConfig = {
+        // custom config for the MTW app 
+        const mtwAppConfig = {
             border: true // app border in the MTW page                    
         }
     </script>
     <script src="https://morethanwallet.com/appstore/index.js"></script>
+    
 </body>
 
 </html>
