--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         .dark .dark\:bg-gray-800 {
             background-color: #181819;
         }
+        .light .light\:text-black {
+            color: #000;
+        }
 
         /*add your custom css rules here*/
     </style>    
 </head>
 
-<body class="dark:text-white px-4">
+<body class="dark:text-white px-4 light:text-black">
     <div class="max-w-[360px] mt-4 mx-auto h-[54px]">
         <div class="text-4xl py-6 text-center">Real time ticker</div>
         <div class="flex justify-center gap-4 font-bold pb-2">
