--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="text-center" id="time"></div>
     </div>
     <script>
-        const wsURL = 'wss://tickers.herokuapp.com'
+        const wsURL =  'wss://mtickers.mtw-testnet.com' //'wss://tickers.herokuapp.com'
         const socket = new WebSocket(wsURL)
         const listURL = "https://api.mtw-testnet.com/tickers/all"
         const def = 'BTC'
